Fix popover visibility DDF wizard and popover has some issues with visibility, this is a quick hack so we should try fix it a bit nicer, but for time being it's fine

--- a/src/Components/CreateImageWizard/CreateImageWizard.scss
+++ b/src/Components/CreateImageWizard/CreateImageWizard.scss
@@ -2,7 +2,7 @@
     padding-right: 0px;   
 }
 
-.ins-c-image--builder__popover .pf-c-popover {
+.pf-c-popover[data-popper-reference-hidden="true"] {
     font-weight: initial;
     visibility: initial;
     pointer-events: initial;
